--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-fast-marquee": "^1.3.5",
     "react-icon": "^1.0.0",
     "react-icons": "^4.7.1",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
