--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-helmet": "^6.1.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.7.1",
+    "react-inner-image-zoom": "^3.0.2",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
